# AudioNote

./: .dockerignore  .env.postgres  .gitignore  Makefile
audio_book_api/: Cargo.toml
audio_book_api/src/: main.rs
audio_book_api/src/audio/: audio_converter.rs  ffmpeg_controller.rs  m3u8_parser.rs  mod.rs
audio_book_api/src/auth/: hmac_signer.rs  mod.rs
audio_book_api/src/books/: book_keeper.rs  directory_handler.rs  errors.rs  external_models.rs  mod.rs  services.rs
audio_book_api/src/database/: connector.rs  mod.rs  savable.rs
audio_book_api/src/database/database_models/: book.rs  mod.rs  stream_data.rs
audio_book_api/src/generics/: errors.rs
audio_book_api/src/logger/: ffmpeg_logger.rs  logger.rs  mod.rs
audio_book_api/src/stream/: errors.rs  external_models.rs  mod.rs  services.rs  stream.rs
audio_book_api/src/websockets/: data.rs  mod.rs  progress_socket.rs
audio_note/: manage.py  pyproject.toml
audio_note/audio/: views.py
audio_note/audio_note/: asgi.py  settings.py  urls.py  wsgi.py
audio_note/base/: apps.py  forms.py  signals.py  urls.py  views.py
audio_note/base/templates/base/: home.html  home.htmldjango  login.html  register.html  register.htmldjango
audio_note/books/: views.py
audio_note/static/css/: animations.css  forms.css  homepage.css  styles.css  variables.css
audio_note/static/css/messages/: messages.css
audio_note/static/js/: main.js  utils.js
audio_note/static/js/components/: logoutButton.js  messages.js  sidebarToggle.js
audio_note/templates/: base.html  base.htmldjango  messages.html  nav.htmldjango  navbar.html
audio_note/theme/static_src/: tailwind.config.js
docker/: audio_book.Dockerfile  compose.yaml  (+1 more)
