[package]
name = "audio_book_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
dotenv = "0.15.0"
serde = "1.0.205"
serde_json = "1.0.122"
tokio = "1.38.1"
derive_more = { version = "1", features = ["full"] }
actix-multipart = "0.7.2"
futures-util = "0.3.30"
chrono = { version = "0.4.38", features = ["serde"] }
rand = "0.8.5"
sha2 = "0.10.8"
base64 = "0.22.1"
bson = { version = "2.11.0", features = ["chrono-0_4"] }
actix-files = "0.6.6"
hmac = "0.12.1"
hex = "0.4.3"
regex = "1.10.6"
fs2 = "0.4.3"
actix-ws = "0.3.0"

[dependencies.mongodb]
version = "3.0.1"

