[tool.poetry]
name = "audio-note"
version = "0.1.0"
description = "A Django application for taking notes on an audio book"
authors = ["Viktor Valentinov <vvalntnv@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.7"
uvicorn = "^0.30.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
