[tool.poetry]
name = "audio-note"
version = "0.1.0"
description = ""
authors = ["Viktor Valentinov <vvalntnv@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.7"
psycopg = {extras = ["binary"], version = "^3.2.1"}
python-dotenv = "^1.0.1"
django-crispy-forms = "^2.3"
crispy-bootstrap4 = "^2024.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
